# QuattrocentoLSLApp

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  reader.cpp  reader.hpp
